--- a/src/main/webapp/app/layouts/navbar/navbar.html
+++ b/src/main/webapp/app/layouts/navbar/navbar.html
@@ -29,6 +29,18 @@
                         </span>
                     </a>
                     <ul class="dropdown-menu" uib-dropdown-menu>
+                        <li ui-sref-active="active" ><a ui-sref="evento" data-toggle="collapse" data-target=".navbar-collapse.in"><span class="glyphicon glyphicon-asterisk"></span>
+                        &#xA0;<span translate="global.menu.entities.evento">Evento</span></a></li>
+                        <li ui-sref-active="active" ><a ui-sref="asociacion" data-toggle="collapse" data-target=".navbar-collapse.in"><span class="glyphicon glyphicon-asterisk"></span>
+                        &#xA0;<span translate="global.menu.entities.asociacion">Asociacion</span></a></li>
+                        <li ui-sref-active="active" ><a ui-sref="favorito" data-toggle="collapse" data-target=".navbar-collapse.in"><span class="glyphicon glyphicon-asterisk"></span>
+                        &#xA0;<span translate="global.menu.entities.favorito">Favorito</span></a></li>
+                        <li ui-sref-active="active" ><a ui-sref="imagen" data-toggle="collapse" data-target=".navbar-collapse.in"><span class="glyphicon glyphicon-asterisk"></span>
+                        &#xA0;<span translate="global.menu.entities.imagen">Imagen</span></a></li>
+                        <li ui-sref-active="active" ><a ui-sref="inscripcion-aso" data-toggle="collapse" data-target=".navbar-collapse.in"><span class="glyphicon glyphicon-asterisk"></span>
+                        &#xA0;<span translate="global.menu.entities.inscripcionAso">Inscripcion Aso</span></a></li>
+                        <li ui-sref-active="active" ><a ui-sref="inscripcion-evento" data-toggle="collapse" data-target=".navbar-collapse.in"><span class="glyphicon glyphicon-asterisk"></span>
+                        &#xA0;<span translate="global.menu.entities.inscripcionEvento">Inscripcion Evento</span></a></li>
                         <!-- jhipster-needle-add-entity-to-menu - JHipster will add entities to the menu here -->
                     </ul>
                 </li>
